--- a/release-notes/0.1.4.md
+++ b/release-notes/0.1.4.md
@@ -4,14 +4,24 @@ PocketCluster 0.1.4
 Important Features
 ------------------
 - Simple to use
-  Only takes mouse clicks to build a BigData and Machine Learning cluster. No command line typing, no software dependency check, no configuration. Download & bake images, boot slave nodes, and run PocketCluster.
-  You are all set to go.
+  Only takes mouse clicks to build a BigData and Machine
+  Learning cluster. No command line typing, no software
+  dependency check, no configuration.
+
+  Download & bake images, boot slave nodes, and run
+  PocketCluster. You are all good to go.
 
 - Secure network connection
-  Most of network connection is secure in a way that it's hard to eavesdrop communication between master host and slave node.
+  Most of network connection is secure and it is hard
+  to eavesdrop communication between master host and
+  slave node.
 
 - Modular installation engine
-  Installation of packages is handled in modular, idempotent manner that a package installation could be quickly aborted and retried when disruption takes place during the process.
+  Installation of packages is handled in modular,
+  idempotent manner that a package installation could
+  be quickly aborted and retried when disruption takes
+  place during the process.
 
 - Automatic Update
-  When new version is released, OSX application and client node are automatically downloaded and updated.
+  When new version is released, OSX application and
+  client node are automatically downloaded and updated.
