--- a/release-notes/0.1.4.md
+++ b/release-notes/0.1.4.md
@@ -1,4 +1,5 @@
 PocketCluster 0.1.4
+-------------------
 - Fixes a bug where Apache Spark installation takes prolonged period.
 
 Important Features
@@ -11,16 +12,16 @@ Important Features
   Download & bake images, boot slave nodes, and run
   PocketCluster. You are all good to go.
 
-- Secure network connection
-  Most of network connection is secure and it is hard
-  to eavesdrop communication between master host and
-  slave node.
+- Secure master & slave connection
+  Most of network connections are secure and it is hard
+  to eavesdrop the communication between master and
+  slave nodes.
 
 - Modular installation engine
   Installation of packages is handled in modular,
-  idempotent manner that a package installation could
-  be quickly aborted and retried when disruption takes
-  place during the process.
+  idempotent manner that package installation could be 
+  quickly aborted and retried without side effect when
+  disruption takes place during the process.
 
 - Automatic Update
   When new version is released, OSX application and
