--- a/release-notes/0.1.4.md
+++ b/release-notes/0.1.4.md
@@ -4,25 +4,25 @@ PocketCluster 0.1.4
 
 Important Features
 ------------------
-- Simple to use
+- Simple to Use
   Only takes mouse clicks to build a BigData and Machine
   Learning cluster. No command line typing, no software
   dependency check, no configuration.
 
-  Download & bake images, boot slave nodes, and run
-  PocketCluster. You are all good to go.
+- All-In-One, Ready-made, Out-of-the-Box Package
+  Cluster frameworks such as Apache Spark or Hadoop come
+  in a package that needs no extra configuration steps.
 
-- Secure master & slave connection
+- Reduced Installation Time
+  The new version will complete installing a package of
+  Hadoop + Spark + Jupyter across your entire cluster
+  within half an hour.
+
+- Secure Network Connection
   Most of network connections are secure and it is hard
   to eavesdrop the communication between master and
   slave nodes.
 
-- Modular installation engine
-  Installation of packages is handled in modular,
-  idempotent manner that package installation could be 
-  quickly aborted and retried without side effect when
-  disruption takes place during the process.
-
-- Automatic Update
-  When new version is released, OSX application and
-  client node are automatically downloaded and updated.
+- 64-bit Kernel
+  All nodes runs in 64-bit kernel fullying utilizing harware
+  capacities to accelerate data handling process.
